<resources>
    <string name="app_name">AppKotlin</string>

    <string name="age_restrictions">13+</string>
    <string name="avengers_movie_name">Avengers:\nEnd Game</string>
    <string name="avengers_movie_tags">Action, Adventure, Fantasy</string>
    <string name="reviews">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="storyLineText">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="main_movie_image">Main movie image</string>
    <string name="back">Back</string>
    <string name="movie_cast_1_name">Robert Downey Jr.</string>
    <string name="movie_cast_2_name">Chris Evans</string>
    <string name="movie_cast_3_name">Mark Ruffalo</string>
    <string name="movie_cast_4_name">Chris Hemsworth</string>
    <string name="hello_world">Hello, world!</string>
    <string name="movies_list">Movies list</string>
    <string name="tags">Action, Adventure, Drama</string>
    <string name="movie_item_film_name">Avengers: End Game</string>
    <string name="movie_item_film_duration">137 min</string>
</resources>