<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movies_list_view">

    <ImageView
        android:id="@+id/movie_item_header_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:adjustViewBounds="true"
        android:src="@drawable/movie_item"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_mask"
        app:layout_constraintTop_toTopOf="@+id/movie_item_header_image"
        app:layout_constraintBottom_toBottomOf="@+id/movie_item_header_image"
        app:layout_constraintStart_toStartOf="@+id/movie_item_header_image"
        app:layout_constraintEnd_toEndOf="@+id/movie_item_header_image" />

    <TextView
        android:id="@+id/movie_item_pg"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:gravity="center"
        android:text="@string/age_restrictions"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_body"
        android:background="@drawable/pg_rect"
        android:layout_marginTop="@dimen/space8dp"
        android:layout_marginStart="@dimen/space8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/movie_item_like"
        android:layout_width="16dp"
        android:layout_height="14dp"
        android:src="@drawable/ic_like"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/movie_item_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_tag"
        android:text="@string/tags"
        android:textColor="@color/dark_pink"
        android:layout_marginStart="@dimen/spacing_2x"
        android:layout_marginBottom="@dimen/spacing_1x"
        app:layout_constraintBottom_toTopOf="@+id/movie_reviews_count_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/movie_reviews_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/text_size_tag"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/movie_rating_star5_image"
        app:layout_constraintBottom_toBottomOf="@+id/movie_item_header_image" />

    <ImageView
        android:id="@+id/movie_rating_star1_image"
        android:layout_width="@dimen/spacing_2x"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_2x"
        android:padding="@dimen/spacing_0_5x"
        android:src="@drawable/ic_star"
        app:tint="@color/light_pink"
        app:layout_constraintTop_toTopOf="@+id/movie_reviews_count_text"
        app:layout_constraintBottom_toBottomOf="@+id/movie_reviews_count_text"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/movie_rating_star2_image"
        android:layout_width="@dimen/spacing_2x"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_0_5x"
        android:src="@drawable/ic_star"
        app:tint="@color/light_pink"
        app:layout_constraintTop_toTopOf="@+id/movie_rating_star1_image"
        app:layout_constraintBottom_toBottomOf="@+id/movie_rating_star1_image"
        app:layout_constraintStart_toEndOf="@+id/movie_rating_star1_image"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/movie_rating_star3_image"
        android:layout_width="@dimen/spacing_2x"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_0_5x"
        android:src="@drawable/ic_star"
        app:tint="@color/light_pink"
        app:layout_constraintTop_toTopOf="@+id/movie_rating_star1_image"
        app:layout_constraintBottom_toBottomOf="@+id/movie_rating_star1_image"
        app:layout_constraintStart_toEndOf="@+id/movie_rating_star2_image"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/movie_rating_star4_image"
        android:layout_width="@dimen/spacing_2x"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_0_5x"
        android:src="@drawable/ic_star"
        app:tint="@color/light_pink"
        app:layout_constraintTop_toTopOf="@+id/movie_rating_star1_image"
        app:layout_constraintBottom_toBottomOf="@+id/movie_rating_star1_image"
        app:layout_constraintStart_toEndOf="@+id/movie_rating_star3_image"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/movie_rating_star5_image"
        android:layout_width="@dimen/spacing_2x"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_0_5x"
        android:src="@drawable/ic_star"
        app:tint="@color/dark_gray"
        app:layout_constraintTop_toTopOf="@+id/movie_rating_star1_image"
        app:layout_constraintBottom_toBottomOf="@+id/movie_rating_star1_image"
        app:layout_constraintStart_toEndOf="@+id/movie_rating_star4_image"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/movie_item_film_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_item_film_name"
        android:textSize="@dimen/text_size_sub_title"
        android:textColor="#ECECEC"
        android:layout_marginStart="@dimen/spacing_2x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/movie_item_film_duration" />

    <TextView
        android:id="@+id/movie_item_film_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_item_film_duration"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/text_size_tag"
        android:layout_marginBottom="@dimen/spacing_4x"
        android:layout_marginStart="@dimen/spacing_2x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/movie_item_tag" />
</androidx.constraintlayout.widget.ConstraintLayout>